--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,21 +1,16 @@
-{{- if $.Values.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.global.mysql.secretName }}
+  name: {{ include "mysql.name" . }}
   namespace: {{ $.Release.Namespace }}
-  labels:
-    {{- include "mysql.labels" . | nindent 4 }}
+type: Opaque
 data:
-  {{- if eq $.Values.architecture "standalone" }}
-  MYSQL_HOST: {{ (printf "%s-0.%s" (include "mysql.name" .) (include "mysql.name" .)) | b64enc | quote }}
-  MYSQL_PORT: {{ default "" .Values.service.externalPort | toString | b64enc | quote }}
-  MYSQL_USER: {{ default "" .Values.auth.username | b64enc | quote }}
-  MYSQL_PASS: {{ default "" .Values.auth.password | b64enc | quote }}
-  {{- else if eq $.Values.architecture "group-replication" }}
-  MYSQL_HOST: {{ (printf "%s-proxysql" (include "mysql.name" .) ) | b64enc | quote }}
-  MYSQL_PORT: {{ default "" .Values.proxySQL.service.externalPort | toString | b64enc | quote }}
-  MYSQL_USER: {{ default "" .Values.auth.username | b64enc | quote }}
-  MYSQL_PASS: {{ default "" .Values.auth.password | b64enc | quote }}
+  ROOT_PASSWORD: {{ default "" .Values.auth.rootPassword | b64enc | quote }}
+  REPL_USER: {{ default "repl" .Values.auth.replicationUser | b64enc | quote }}
+  REPL_PASS: {{ default "" .Values.auth.replicationPassword | b64enc | quote }}
+  {{- if eq .Values.architecture "group-replication" }}
+  MONITOR_USER: {{ default "monitor" .Values.global.auth.monitorUsername | b64enc | quote }}
+  MONITOR_PASS: {{ default "" .Values.global.auth.monitorUsername | b64enc | quote }}
   {{- end }}
-{{- end }}
+  MYSQL_USER: {{ default "" .Values.global.auth.username | b64enc | quote }}
+  MYSQL_PASS: {{ default "" .Values.global.auth.password | b64enc | quote }}
