--- a/templates/configmap-script.yaml
+++ b/templates/configmap-script.yaml
@@ -1,10 +1,8 @@
-{{- if $.Values.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "mysql.name" . }}-script
   namespace: {{ $.Release.Namespace }}
 data:
-  mysql_manage.sh: |
-{{ (.Files.Glob "files/mysql_manage.sh").AsConfig | indent 2 }}
-{{- end }}
+  run_service.sh: |
+{{ (.Files.Glob "files/run_service.sh").AsConfig | indent 2 }}
