--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,4 +1,3 @@
-{{- if $.Values.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -9,20 +8,19 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+    - port: {{ .Values.service.ports.mysql }}
+      targetPort: mysql
       protocol: TCP
-      name: http
+      name: mysql
       {{- if contains "NodePort" .Values.service.type }}
       nodePort: {{.Values.service.nodePort}}
       {{- end }}
-    {{- if eq $.Values.architecture "group-replication" }}
-    - port: 33061
-      targetPort: 33061
-      name: mgr
+    {{- if eq .Values.architecture "group-replication" }}
+    - port: {{ .Values.service.ports.group }}
+      targetPort: group
+      name: group
     {{- end }}
   selector:
     {{- include "mysql.selectorLabels" . | nindent 4 }}
   publishNotReadyAddresses: true
   clusterIP: None
-{{- end }} 
