--- a/values.yaml
+++ b/values.yaml
@@ -1,16 +1,33 @@
-enabled: true
-
-# Support standalone\group-replication architecture mode
-architecture: group-replication
-
 global:
-  ## Configuration of MySQL
-  mysql:
-    secretName: mysql
+  auth:
+    username: "abc"
+    password: "Abc@123!"
+    monitorUsername: monitor
+    monitorPassword: Monitor@123!
 
+image:
+  registry: docker.io
+  repository: mysql
+  tag: 8.0.26
+  ## Specify a imagePullPolicy
+  ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+  ## ref: https://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+  ##
+  pullPolicy: IfNotPresent
+  ## Optionally specify an array of imagePullSecrets (secrets must be manually created in the namespace)
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  ## Example:
+  ## pullSecrets:
+  ##   - myRegistryKeySecretName
+  ##
+  pullSecrets: []
+
+## @param architecture MySQL architecture (`standalone` or `replicaiton`)
+##
+architecture: group-replicaiton
+## MySQL Authentication parameters
+##
 auth:
-  username: abc
-  password: Abc@123!
   rootPassword: Root@123!
   replicationUser: repl
   replicationPassword: repl@123!
@@ -21,49 +38,13 @@ persistence:
     - ReadWriteOnce
   size: 10Gi
 
-image:
-  # Repository for container
-  repository: mysql
-  tag: 8.0.26
-  pullPolicy: IfNotPresent
-  pullSecrets: []
-  # pullSecrets:
-  # - name: regcred
-
 service:
   type: ClusterIP
-  externalPort: 3306
-  internalPort: 3306
-  #nodePort: 30001
-
-init:
-  resources:
-    limits:
-      cpu: 500m
-      memory: 1G
-    requests:
-      cpu: 500m
-      memory: 1G
-
-proxySQL:
-  replicaCount: 1
-  image:
-    # Repository for container
-    repository: proxysql
-    tag: 2.4.2
-    pullPolicy: IfNotPresent
-    pullSecrets: []
-    # pullSecrets:
-    # - name: regcred
-  service:
-    type: ClusterIP
-    externalPort: 6033
-    internalPort: 6033
-    #nodePort: 30002
-  auth:
-    monitorUsername: monitor
-    monitorPassword: Monitor@123!
-  resources: {}
+  ports:
+    mysql: 3306
+    group: 33061
+  nodePorts:
+    mysql: 33306
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -77,19 +58,88 @@ resources: {}
   #   cpu: 2
   #   memory: 4G
 
-nodeAffinity: {}
-# nodeAffinity:
-#   requiredDuringSchedulingIgnoredDuringExecution:
-#     nodeSelectorTerms:
-#       - matchExpressions:
-#           - key: mysql-group-replication
-#             operator: Exists
+## @param podAntiAffinityPreset MySQL pod anti-affinity preset. Ignored if `affinity` is set. Allowed values: `soft` or `hard`
+## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+## Allowed values: soft, hard
+##
+podAntiAffinityPreset: soft
 
+## MySQL node affinity preset
+## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+##
+nodeAffinityPreset:
+  ## @param nodeAffinityPreset.type MySQL  node affinity preset type. Ignored if `affinity` is set. Allowed values: `soft` or `hard`
+  ##
+  type: ""
+  ## @param nodeAffinityPreset.key MySQL node label key to match Ignored if `affinity` is set.
+  ## E.g.
+  ## key: "kubernetes.io/e2e-az-name"
+  ##
+  key: ""
+  ## @param nodeAffinityPreset.values MySQL node label values to match. Ignored if `affinity` is set.
+  ## E.g.
+  ## values:
+  ##   - e2e-az1
+  ##   - e2e-az2
+  ##
+  values: []
+
+## @param affinity Affinity for MySQL pods assignment
+## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+## Note: podAntiAffinityPreset, and  nodeAffinityPreset will be ignored when it's set
+##
+affinity: {}
+
+## Configure extra options for liveness probe
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
+## @param livenessProbe.enabled Enable livenessProbe
+## @param livenessProbe.initialDelaySeconds Initial delay seconds for livenessProbe
+## @param livenessProbe.periodSeconds Period seconds for livenessProbe
+## @param livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+## @param livenessProbe.failureThreshold Failure threshold for livenessProbe
+## @param livenessProbe.successThreshold Success threshold for livenessProbe
+##
+livenessProbe:
+  enabled: true
+  initialDelaySeconds: 5
+  periodSeconds: 10
+  timeoutSeconds: 1
+  failureThreshold: 3
+  successThreshold: 1
+
+## Configure extra options for readiness probe
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
+## @param readinessProbe.enabled Enable readinessProbe
+## @param readinessProbe.initialDelaySeconds Initial delay seconds for readinessProbe
+## @param readinessProbe.periodSeconds Period seconds for readinessProbe
+## @param readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+## @param readinessProbe.failureThreshold Failure threshold for readinessProbe
+## @param readinessProbe.successThreshold Success threshold for readinessProbe
+##
+readinessProbe:
+  enabled: true
+  initialDelaySeconds: 5
+  periodSeconds: 10
+  timeoutSeconds: 1
+  failureThreshold: 3
+  successThreshold: 1
+
+## Configure extra options for startupProbe probe
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
+## @param startupProbe.enabled Enable startupProbe
+## @param startupProbe.initialDelaySeconds Initial delay seconds for startupProbe
+## @param startupProbe.periodSeconds Period seconds for startupProbe## @param startupProbe.timeoutSeconds Timeout seconds for startupProbe## @param startupProbe.failureThreshold Failure threshold for startupProbe
+## @param startupProbe.successThreshold Success threshold for startupProbe
+##
+startupProbe:
+  enabled: true
+  initialDelaySeconds: 15
+  periodSeconds: 10
+  timeoutSeconds: 1
+  failureThreshold: 15
+  successThreshold: 1
+
+## @param tolerations Tolerations for MySQL pods assignment
+## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
+##
 tolerations: []
-# tolerations:
-#   - effect: NoSchedule
-#     operator: Exists
-#   - key: CriticalAddonsOnly
-#     operator: Exists
-#   - effect: NoExecute
-#     operator: Exists
