--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -3,42 +3,34 @@ kind: StatefulSet
 metadata:
   name: {{ include "mysql.name" . }}
   namespace: {{ $.Release.Namespace }}
-  labels:
-    {{- include "mysql.labels" . | nindent 4 }}
+  labels: {{- include "common.labels.standard" . | nindent 4 }}
 spec:
-  volumeClaimTemplates:
-  - metadata:
-      name: data
-      labels:
-        {{- include "mysql.labels" . | nindent 8 }}
-    spec:
-      {{- with .Values.persistence.accessModes }}
-      accessModes:
-      {{- toYaml . | nindent 6 }}
-      {{- end }}
-      resources:
-        requests:
-          storage: {{ .Values.persistence.size }}
-      storageClassName: {{ default "" .Values.persistence.storageClassName | quote }}
-      volumeMode: Filesystem
-  podManagementPolicy: OrderedReady
-  {{- if eq $.Values.architecture "group-replication" }}
+  {{- if eq .Values.architecture "group-replication" }}
   replicas: 3
-  {{- else if eq $.Values.architecture "standalone" }}
+  {{- else if eq .Values.architecture "standalone" }}
   replicas: 1
   {{- end }}
+  podManagementPolicy: OrderedReady
   selector:
-    matchLabels:
-      {{- include "mysql.selectorLabels" . | nindent 6 }}
+    matchLabels: {{- include "common.labels.matchLabels" . | nindent 8 }}
+  serviceName: {{ include "mysql.name" . }}
   updateStrategy:
     type: RollingUpdate
-  serviceName: {{ include "mysql.name" . }}
   template:
     metadata:
-      labels:
-        {{- include "mysql.selectorLabels" . | nindent 8 }}
+      labels: {{ include "common.labels.standard" . | nindent 8 }}
     spec:
       {{- include "mysql.imagePullSecrets" . | nindent 8 }}
+      {{- if .Values.affinity }}
+      affinity: {{- include "common.tplvalues.render" (dict "value" .Values.affinity "context" $) | nindent 8 }}
+      {{- else }}
+      affinity:
+        podAntiAffinity: {{- include "common.affinities.pods" (dict "type" .Values.podAntiAffinityPreset "context" $) | nindent 10 }}
+        nodeAffinity: {{- include "common.affinities.nodes" (dict "type" .Values.nodeAffinityPreset.type "key" .Values.nodeAffinityPreset.key "values" .Values.nodeAffinityPreset.values) | nindent 10 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{- include "common.tplvalues.render" (dict "value" .Values.tolerations "context" $) | nindent 8 }}
+      {{- end }}
       initContainers:
       - name: init-container
         image: {{ include "mysql.image" . }}
@@ -164,16 +156,17 @@ spec:
       - configMap:
           name: {{ include "mysql.name" . }}-script
         name: script
-
-        {{- if .Values.primary.affinity }}
-      affinity: {{- include "common.tplvalues.render" (dict "value" .Values.primary.affinity "context" $) | nindent 8 }}
-      {{- else }}
-      affinity:
-        podAffinity: {{- include "common.affinities.pods" (dict "type" .Values.primary.podAffinityPreset "context" $) | nindent 10 }}
-        podAntiAffinity: {{- include "common.affinities.pods" (dict "type" .Values.primary.podAntiAffinityPreset "context" $) | nindent 10 }}
-        nodeAffinity: {{- include "common.affinities.nodes" (dict "type" .Values.primary.nodeAffinityPreset.type "key" .Values.primary.nodeAffinityPreset.key "values" .Values.primary.nodeAffinityPreset.values) | nindent 10 }}
+  volumeClaimTemplates:
+  - metadata:
+      name: data
+      labels: {{- include "common.labels.standard" . | nindent 8 }}
+    spec:
+      {{- with .Values.persistence.accessModes }}
+      accessModes:
+      {{- toYaml . | nindent 6 }}
       {{- end }}
-
-      {{- if .Values.primary.tolerations }}
-      tolerations: {{- include "common.tplvalues.render" (dict "value" .Values.primary.tolerations "context" $) | nindent 8 }}
-      {{- end }}
+      resources:
+        requests:
+          storage: {{ .Values.persistence.size }}
+      storageClassName: {{ default "" .Values.persistence.storageClassName | quote }}
+      volumeMode: Filesystem
