--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -8,7 +8,7 @@ data:
   ROOT_PASSWORD: {{ default "" .Values.auth.rootPassword | b64enc | quote }}
   REPL_USER: {{ default "repl" .Values.auth.replicationUser | b64enc | quote }}
   REPL_PASS: {{ default "" .Values.auth.replicationPassword | b64enc | quote }}
-  {{- if eq .Values.architecture "group-replication" }}
+  {{- if eq .Values.global.architecture "group-replication" }}
   MONITOR_USER: {{ default "monitor" .Values.global.auth.monitorUsername | b64enc | quote }}
   MONITOR_PASS: {{ default "" .Values.global.auth.monitorPassword | b64enc | quote }}
   {{- end }}
