--- a/charts/proxysql/Chart.yaml
+++ b/charts/proxysql/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: mysql
-description: deploy mysql standalone or group-replication Helm chart for Kubernetes
+name: proxysql
+description: deploy proxysql for mysql group replication Helm chart for Kubernetes
 type: application
 version: 1.1.1
-appVersion: 8.0.26
+appVersion: 2.4.2
