--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ $.Release.Namespace }}
   labels: {{- include "common.labels.standard" . | nindent 4 }}
 spec:
-  {{- if eq .Values.architecture "group-replication" }}
+  {{- if eq .Values.global.architecture "group-replication" }}
   replicas: 3
   {{- else if eq .Values.architecture "standalone" }}
   replicas: 1
@@ -86,7 +86,7 @@ spec:
         - containerPort: {{ .Values.service.ports.mysql }}
           name: mysql
           protocol: TCP
-        {{- if eq .Values.architecture "group-replication" }}
+        {{- if eq .Values.global.architecture "group-replication" }}
         - containerPort: {{ .Values.service.ports.group }}
           name: group
           protocol: TCP
