--- a/charts/proxysql/templates/configmap.yaml
+++ b/charts/proxysql/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "proxysql.name" . }}
+  name: {{ include "proxysql.name" . }}-config
   namespace: {{ $.Release.Namespace }}
 data:
   proxysql.cnf: |
