--- a/charts/proxysql/values.yaml
+++ b/charts/proxysql/values.yaml
@@ -1,6 +1,6 @@
 image:
   registry: docker.io
-  repository: proxysql
+  repository: haolowkey/proxysql
   tag: 2.4.2
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
