--- a/values.yaml
+++ b/values.yaml
@@ -19,7 +19,7 @@ global:
 
 image:
   registry: docker.io
-  repository: mysql
+  repository: haolowkey/mysql
   tag: 8.0.26
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
