--- a/charts/proxysql/templates/configmap.yaml
+++ b/charts/proxysql/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.architecture "group-replication" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -96,3 +97,4 @@ data:
                     comment="MGR"
           }
     )
+{{- end }}
