--- a/charts/proxysql/templates/deployment.yaml
+++ b/charts/proxysql/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.architecture "group-replication" }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -81,3 +82,4 @@ spec:
       - name: config
         configMap:
           name: {{ include "proxysql.name" . }}-config
+{{- end }}
