--- a/charts/proxysql/templates/service.yaml
+++ b/charts/proxysql/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.architecture "group-replication" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -15,3 +16,4 @@ spec:
       nodePort: {{.Values.service.nodePort}}
       {{- end }}
   selector: {{- include "common.labels.standard" . | nindent 4 }}
+{{- end }}
