--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   {{- if eq .Values.global.architecture "group-replication" }}
   replicas: 3
-  {{- else if eq .Values.architecture "standalone" }}
+  {{- else if eq .Values.global.architecture "standalone" }}
   replicas: 1
   {{- end }}
   podManagementPolicy: OrderedReady
@@ -65,6 +65,7 @@ spec:
         - /opt/run_service.sh
         - service
         - start
+        {{- if eq .Values.global.architecture "group-replication" }}
         lifecycle:
           postStart:
             exec:
@@ -73,6 +74,7 @@ spec:
               - /opt/run_service.sh
               - replication
               - init
+        {{- end }}
         image: {{ include "mysql.image" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         name: mysql
